# allyourbase

./: Makefile  Makefile.in  README.md  check.sh  config.status  configure  configure.ac  main.c
libUseful-bundled/: Makefile  String.c
tests/: services-base32enc
